--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </header>
 
     <!-- Main content -->
-  <section id="mainContent" class="content" style="background-image:url('./dist/img/bg.png')">
+  <section id="mainContent" class="content" style="background-image:url('"http://185.141.62.34/tipspesa/dist/img/bg.png')">
       <div id="new-posts-div" class="row"></div>
     </section>
     <!-- /.content -->
